[project]
name = "sma-tokpr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.12.0",
]
